# demo-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp  worker.cpp  worker.hh
tests/: CMakeLists.txt  unit_tests.cpp
